...
            "state": "translated",
            "value": "音频列表（%d）"
          }
        }
      }
    },
    "Background Color": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Background Color"
...
            "state": "translated",
            "value": "提取文字"
          }
        }
      }
    },
    "File": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "File"
...
            "state": "translated",
            "value": "文档样式..."
          }
        }
      }
    },
    "Line Spacing": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Line Spacing"
...
            "state": "translated",
            "value": "行间距"
          }
        }
      }
    },
    "Paragraph Spacing": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Paragraph Spacing"
...
            "state": "translated",
            "value": "字型"
          }
        }
      }
    },
    "Font": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Font"
...
            "state": "translated",
            "value": "视频列表（%d）"
          }
        }
      }
    },
    "View": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "View"
...
